# heatseeker

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  VERIFICATION.txt  appveyor.yml  build.rs  create-macos-universal-binary.sh  create-nupkg.bat  heatseeker.nuspec  heatseeker.rb  musl-build.sh  musl-rustc  push-nupkg.bat  selectric.rs
autoload/: heatseeker.vim
ci/: before_deploy.ps1  before_deploy.sh  script.sh
plugin/: heatseeker.vim
src/: ansi.rs  args.rs  logging.rs  main.rs  matching.rs  screen.rs
src/screen/: mod.rs  unix.rs  windows.rs
src/shell/: hs.bash  hs.fish  hs.nu  hs.ps1  hs.zsh
