[package]
name = "heatseeker"
version = "1.7.3"
authors = ["Ryan Schmitt <rschmitt@pobox.com>"]
description = "A fast, robust, and portable fuzzy finder."
license = "MIT"
readme = "README.md"
documentation = "https://github.com/rschmitt/heatseeker"
homepage = "https://github.com/rschmitt/heatseeker"
repository = "https://github.com/rschmitt/heatseeker"
build = "build.rs"
exclude = ["/ci/*", "/Cross.toml", "/VERIFICATION.txt", "*.nuspec", "*.bat", "*.rb", "*.yml"]
edition = "2021"

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
crossbeam = "0.8"
indexmap = "2"
num_cpus = "1"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["everything", "impl-default"] }

[build-dependencies]
chrono = "0.4"
built = { version = "0.8", features = ["git2", "chrono"] }

[profile.release]
debug = true
