[package]
name = "heatseeker"
version = "1.10.0"
authors = ["Ryan Schmitt <rschmitt@pobox.com>"]
description = "A fast, robust, and portable fuzzy finder."
license = "MIT"
readme = "README.md"
documentation = "https://github.com/rschmitt/heatseeker"
homepage = "https://github.com/rschmitt/heatseeker"
repository = "https://github.com/rschmitt/heatseeker"
build = "build.rs"
exclude = ["/ci/*", "/Cross.toml", "/VERIFICATION.txt", "*.nuspec", "*.bat", "*.rb", "*.yml"]
edition = "2024"

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
indexmap = "2"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
rayon = "1"
itoa = "1"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies.windows]
version = "^0.62"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_WindowsProgramming",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
chrono = "0.4"
built = { version = "0.8", features = ["git2", "chrono"] }
